// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkipRecurringPickupPopup Component When deliveryProvider is ON DEMAND should match snaphot 1`] = `
<div>
  <div
    style="position: fixed; width: 0px; height: 0px; top: 0px; left: 0px; z-index: 99999999;"
  >
    <div
      style="position: fixed; left: 0px; right: 0px; top: 0px; bottom: 0px; z-index: 0; opacity: 1; transition: opacity 0.2s ease-out; background: white;"
    />
    <div
      style="position: fixed; z-index: 1; box-shadow: 0 0 4px rgba(0, 0, 0, 0.3); background: white; left: 25%; top: 0px; width: 50%; height: 768px; transition: left 0.2s ease-out,top 0.2s ease-out,width 0.2s ease-out,height 0.2s ease-out;"
    >
      <div
        style="position: absolute; z-index: 2; opacity: 0; top: -5px; height: 10px; left: 0px; width: 100%; cursor: row-resize;"
      />
      <div
        style="width: 100%; height: 100%; overflow: auto;"
      >
        <div
          class="sc-bczRLJ sc-gsnTZi hHtzsp hzPtvw"
        >
          <div
            class="sc-bczRLJ sc-gsnTZi guItVf hzPtvw"
          >
            <div
              class="sc-bczRLJ haqESh"
              color="CENTS_BLUE"
              font-size="18px"
              font-weight="700"
            >
              Laundry Pickup Reminder
            </div>
            <div
              class="sc-bczRLJ sc-gsnTZi JBpjR hzPtvw"
            >
              <div
                class="sc-bczRLJ sc-gsnTZi iIJBxE hzPtvw"
              >
                <div
                  class="sc-bczRLJ eVqmpI"
                  color="BLACK"
                  font-size="24px"
                  font-weight="700"
                >
                  Pickup scheduled for
                </div>
                <div
                  class="sc-bczRLJ eVqmpI"
                  color="BLACK"
                  font-size="24px"
                  font-weight="700"
                >
                  06:00AM
                   - 
                  06:30AM
                </div>
                <div
                  class="sc-bczRLJ fhewhz"
                  color="BLACK"
                  font-family="secondary"
                  font-size="18px"
                >
                  Friday
                  , 
                  April
                   
                  22
                </div>
              </div>
              <div
                class="sc-bczRLJ dOZKCD"
              >
                <img
                  alt="Car Image"
                  class="sc-bczRLJ iQjTFr"
                  src="Delivery_Car_Half.svg"
                />
              </div>
            </div>
            <div
              class="sc-bczRLJ dXmDhD"
              color="CENTS_BLUE"
              font-size="18px"
              font-weight="500"
            >
              Choose a different time
            </div>
          </div>
          <div
            class="sc-bczRLJ craVQO"
            display="flex"
          >
            <button
              class="sc-bczRLJ ejbIIK"
            >
              skip this pickup
            </button>
            <button
              class="sc-bczRLJ bBoEnd"
            >
              got it
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SkipRecurringPickupPopup Component When deliveryProvider is OWN DRIVER should match snaphot 1`] = `
<div>
  <div
    style="position: fixed; width: 0px; height: 0px; top: 0px; left: 0px; z-index: 99999999;"
  >
    <div
      style="position: fixed; left: 0px; right: 0px; top: 0px; bottom: 0px; z-index: 0; opacity: 1; transition: opacity 0.2s ease-out; background: white;"
    />
    <div
      style="position: fixed; z-index: 1; box-shadow: 0 0 4px rgba(0, 0, 0, 0.3); background: white; left: 25%; top: 0px; width: 50%; height: 768px; transition: left 0.2s ease-out,top 0.2s ease-out,width 0.2s ease-out,height 0.2s ease-out;"
    >
      <div
        style="position: absolute; z-index: 2; opacity: 0; top: -5px; height: 10px; left: 0px; width: 100%; cursor: row-resize;"
      />
      <div
        style="width: 100%; height: 100%; overflow: auto;"
      >
        <div
          class="sc-bczRLJ sc-gsnTZi hHtzsp hzPtvw"
        >
          <div
            class="sc-bczRLJ sc-gsnTZi guItVf hzPtvw"
          >
            <div
              class="sc-bczRLJ haqESh"
              color="CENTS_BLUE"
              font-size="18px"
              font-weight="700"
            >
              Laundry Pickup Reminder
            </div>
            <div
              class="sc-bczRLJ sc-gsnTZi JBpjR hzPtvw"
            >
              <div
                class="sc-bczRLJ sc-gsnTZi iIJBxE hzPtvw"
              >
                <div
                  class="sc-bczRLJ eVqmpI"
                  color="BLACK"
                  font-size="24px"
                  font-weight="700"
                >
                  Pickup scheduled for
                </div>
                <div
                  class="sc-bczRLJ eVqmpI"
                  color="BLACK"
                  font-size="24px"
                  font-weight="700"
                >
                  04:00AM
                   - 
                  09:00AM
                </div>
                <div
                  class="sc-bczRLJ fhewhz"
                  color="BLACK"
                  font-family="secondary"
                  font-size="18px"
                >
                  Thursday
                  , 
                  April
                   
                  21
                </div>
              </div>
              <div
                class="sc-bczRLJ dOZKCD"
              >
                <img
                  alt="Van Image"
                  class="sc-bczRLJ iQjTFr"
                  src="Blue_Van_Half.svg"
                />
              </div>
            </div>
            <div
              class="sc-bczRLJ dXmDhD"
              color="CENTS_BLUE"
              font-size="18px"
              font-weight="500"
            >
              Choose a different time
            </div>
          </div>
          <div
            class="sc-bczRLJ craVQO"
            display="flex"
          >
            <button
              class="sc-bczRLJ ejbIIK"
            >
              skip this pickup
            </button>
            <button
              class="sc-bczRLJ bBoEnd"
            >
              got it
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
